<resources>
    <string name="app_name">TodoComponent2</string>
    <string name="view_button">View Todos</string>
    <string name="edit_button">Edit Todos</string>
    <string name="todo_text">Todo</string>
    <string name="details_text">Details</string>
    <string name="date_picker">Select Date</string>
    <string name="save_button">Save Todo</string>
    <string name="delete_button">Delete All Todos</string>
    <string name="todo_invalid">Todo empty, todo not saved.</string>
    <string name="check_iscomplete">Is todo completed?</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="todo">
        <item>Wake up</item>
        <item>Drink Coffee</item>
        <item>Make at least one person laugh</item>
        <item>Plant a tree</item>
        <item>Go to sleep</item>
    </string-array>

    <string-array name="todo_detail">
        <item>Wake up is generally not a pleasant activity but it does happen once a day!</item>
        <item>Caffeine consumption is not a todo, it happens naturally.  </item>
        <item>Follow up the RFC for humour and JokeML</item>
        <item>Today, I planted 2 trees, really! see here: https://www.ecosia.org/</item>
        <item>At least 6 hours is compulsory; drink milky coffee. </item>
    </string-array>
</resources>